# sqlite-riir

./: .clippy.toml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: db.rs  lib.rs  main.rs  page.rs  pager.rs  record.rs  table_iter.rs
src/page/: btree_table_internal.rs  btree_table_leaf.rs
test-data/: minimal-test.sqlite
